# fivrrchatbot

./: -  .env.example  .gitignore  animated-chatbot-main-responsive.txt  asset-manifest.json  index.html  package-lock.json  package.json  supabase_migration.sql  vercel.json
.claude/: settings.local.json
.github/workflows/: keepalive.yml
Backend/: chat.py
Frontend/: .env.example  .npmrc  README.md  eslint-results.json  package-lock.json  package.json
Frontend/docs/: og-image.md  reviews.md
Frontend/public/: CNAME  index.html  llms.txt  manifest.json  robots.txt  sitemap.xml
Frontend/scripts/: indexnow.mjs  prerender.mjs
Frontend/src/: App.tsx  index.css  index.tsx
Frontend/src/components/: About.tsx  AnimatedChatWidget.tsx  CardSwap.css  CardSwap.tsx  Chatbot.tsx  Contact.tsx  CoreValues.tsx  Explore.tsx  FAQ.tsx  Footer.tsx  Grainient.css  Grainient.tsx  Header.tsx  Hero.tsx  HeroCanvas.tsx  PillNav.tsx  (+5 more)
ai-chatbot-services/: .env.example  .npmrc  EMAILJS_SETUP.md  README.md  VERCEL_ENV_SETUP.md  fix_text.js  package-lock.json  package.json
ai-chatbot-services/public/: index.html  robots.txt  sitemap.xml
ai-chatbot-services/src/: App.tsx  index.css
backend/: Procfile  auth_router.py  insights_router.py  main.py  pyproject.toml  requirements.txt  websites_router.py
backend/chatbot/: chatbot.py  chatbot_server.py
backend/chatbot/KB/: chatterify_knowledge.md  chatterify_startup_document.txt
static/css/: main.799ec8f4.css  main.799ec8f4.css.map
static/js/: 453.fe8e3ef1.chunk.js  453.fe8e3ef1.chunk.js.map  main.0bbba492.js  main.0bbba492.js.map
(+72 files in other folders)
