[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "fastapi>=0.135.1",
    "groq==1.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "logging>=0.4.9.6",
    "lxml==6.0.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "sniffio==1.3.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn>=0.30.0",
]
